# app/Models/WebhookContactEvent.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+class WebhookContactEvent extends Model
+{
+    protected $guarded = ["id", "created_at", "updated_at"];
+
+    public function contact(): BelongsTo
+    {
+        return $this->belongsTo(Contact::class, 'contact_id', 'client_id');
+    }
+}
